# spbuild

./: Cargo.toml  README.md
example_solution/: spbuild.json
scripts/: cpdll.py
src/: main.rs  solution.rs  target.rs
src/compiler_interfaces/: gcc.rs
src/dependency_manager/: dependency_resolver.rs
